# Final_AIServer

./: .gitignore  CMakeLists.txt  README.md  hello.cpp  rser_server.cc
RS_Server/: CMakeLists.txt  rser_server.cc
final/: C++11 线程池.md  CMake.md  Cpp相关知识.md  TODO.md  function和bind.md  future和packaged_task.md  gRPC.md  用户态与内核态.md  进程与线程.md  金融行业的用户画像与推荐系统调研.md
model/: CMakeLists.txt  RS_CO_MODEL.pt  model.hpp  model_demo.cc  model_demo.cpp  rs_demo.py  test.cc
rs_protos/: rs.proto
utils/: thread_pool.hpp  utils.hpp
